# auto-features

./: MVP_PLAN.md  README.md  ROADMAP.md  project_plan.md  pyproject.toml
src/reporadar/: __init__.py  citations.py  cli.py  collector.py  config.py  digest.py  embeddings.py  feedback.py  gh_issues.py  llm_suggestions.py  notify.py  output.py  paperswithcode.py  profiler.py  ranker.py  scheduler.py  source_analysis.py  store.py  suggestions.py  trends.py  watcher.py  workspace.py
src/reporadar/sources/: openalex.py  semantic_scholar.py
src/reporadar/templates/: digest.html.j2  digest.md.j2  digest.rss.xml.j2  workspace_digest.md.j2
tests/: conftest.py  test_citations.py  test_cli.py  test_collector.py  test_config.py  test_digest.py  test_embeddings.py  test_feedback.py  test_gh_issues.py  test_llm_suggestions.py  test_notify.py  test_output.py  test_paperswithcode.py  test_profiler.py  test_ranker.py  test_scheduler.py  test_source_analysis.py  test_sources_openalex.py  test_sources_semantic_scholar.py  test_store.py  test_suggestions.py  test_trends.py  test_watcher.py  test_workspace.py
tests/fixtures/: sample_package.json  sample_pyproject.toml  sample_readme.md  sample_requirements.txt
