[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reporadar"
version = "0.1.0"
description = "Monitor arXiv for papers relevant to your repo and produce a weekly Markdown digest."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "jinja2>=3.1",
    "arxiv>=2.0",
]

[project.scripts]
rr = "reporadar.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reporadar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
